# ddinit

./: .gitignore  README.md  pyproject.toml
src/ddinit/: cli.py
