[project]
name = "ddinit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "jupyter>=1.1.1",
]

[project.scripts]
ddinit = "ddinit.cli:main" # Defines your CLI entry point

[project.urls]
Homepage = "https://github.com/ddanieltan/ddinit"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
